--- a/2048_game/src/css/sidebar.css
+++ b/2048_game/src/css/sidebar.css
@@ -83,11 +83,14 @@
     margin-left: 200px; /* full sidebar width */
   }
 }
-.sidebar {
+   /* I CHANGED THIS */
+
+/* .sidebar {
   width: 240px;
   transition: transform 0.3s ease;
-}
+} */
 
+  /* I CHANGED THIS */
 
 
 /* colro */
